# clone-github-subdir

./: Cargo.toml  README.md
src/: main.rs
