[package]
name = "clone-github-subdir"
version = "0.1.0"
authors = ["Abhishek Kumar <akbittu@gmail.com>"]
edition = "2021"
license = "MIT License"
description = "Clone any sub-directory of a Github repository to your local machine."
readme = "README.md"
homepage = "https://github.com/isurfer21/clone-github-subdir"
repository = "https://github.com/isurfer21/clone-github-subdir.git"
keywords = ["cli", "dir", "clone", "git", "tool"]
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.21.2"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde_json = "1.0.103"
url = "2.4.0"

[[bin]]
name = "cgs"
path = "src/main.rs"
